Fix bug where OTP key was unnecessarily transfored to UTF-8 encoded string on write. Not sure why this caused an issue, but it wasn't efficient anyway. Simplified generate checks, and fixed bug where decode tries to read non-existant file.